Remove pragma once

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -602,7 +602,7 @@ libbitcoin_util_a_SOURCES = \
   compat/strnlen.cpp \
   fs.cpp \
   handshake_proof.cpp \
-  handshake_proof_merklecpp.h \
+  handshake_proof_merklecpp.cpp \
   interfaces/echo.cpp \
   interfaces/handler.cpp \
   interfaces/init.cpp \
